<resources>
    <string name="app_name">Drugstore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myaccount">Mi cuenta</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_inventario">Control de Inventario</string>
    <string name="menu_ventas">Control de Ventas</string>
    <string name="menu_compras">Compras</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_boticas">Boticas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenida">BIENVENIDO A SU TIENDA VIRTUAL</string>
    <string name="registrarme">Registrarme</string>
    <string name="contacto">¿Alguna duda? Contáctanos</string>
    <string name="contacto_2">Estamos atentos a tu comentario.</string>
    <string name="registrar">Registrar</string>
    <string name="menu_cerrarsesion">Cerrar sesion</string>
    <string name="menu_iniciarsesion">Iniciar sesion</string>
</resources>