<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.trats.drugstore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.trats.drugstore.ui.CuentaFragment"
        android:label="@string/menu_myaccount"
        tools:layout="@layout/fragment_cuenta" />

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.trats.drugstore.ui.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_inventario"
        android:name="com.trats.drugstore.ui.InventarioFragment"
        android:label="@string/menu_inventario"
        tools:layout="@layout/fragment_inventario" />

    <fragment
        android:id="@+id/nav_ventas"
        android:name="com.trats.drugstore.ui.VentasFragment"
        android:label="@string/menu_ventas"
        tools:layout="@layout/fragment_ventas" />

    <fragment
        android:id="@+id/nav_compras"
        android:name="com.trats.drugstore.ui.ComprasFragment"
        android:label="@string/menu_compras"
        tools:layout="@layout/fragment_compras" />

    <fragment
        android:id="@+id/nav_contacto"
        android:name="com.trats.drugstore.ui.ContactoFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contacto" />

    <fragment
        android:id="@+id/nav_boticas"
        android:name="com.trats.drugstore.ui.boticas.BoticasFragment"
        android:label="@string/menu_boticas"
        tools:layout="@layout/fragment_boticas" />

    <fragment
        android:id="@+id/nav_carrito"
        android:name="com.trats.drugstore.ui.CarritoFragment"
        android:label="Carrito"
        tools:layout="@layout/fragment_carrito" />

    <fragment
        android:id="@+id/nav_regproducto"
        android:name="com.trats.drugstore.ui.RegistrarProductoFragment"
        android:label="Trats"
        tools:layout="@layout/fragment_registrar_producto" />

    <fragment
        android:id="@+id/nav_regcliente"
        android:name="com.trats.drugstore.ui.RegistrarClienteFragment"
        android:label="Trats"
        tools:layout="@layout/fragment_registrar_cliente" />


</navigation>